--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/artagnaldo/bloco-de-notas-reactjs",
+  "homepage": "http://mywebsite.com/relativepath",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
