--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "http://mywebsite.com/relativepath",
+  "homepage": "https://github.com/artagnaldo/bloco-de-notas-reactjs",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
